<resources>
    <string name="app_name">Complex number set of equations</string>
    <string name="tab_1">3 Vars</string>
    <string name="tab_2">2 Vars</string>
    <string name="tab_3">Instruction</string>

    <string-array name="languages">
        <item>Tiếng Việt</item>
        <item>English</item>
    </string-array>

    <string-array name="language_value">
        <item>vi</item>
        <item>en</item>
    </string-array>

    <string name="title_activity_splash_screen">Set of complex number equations solver</string>
    <string name="item_4_vars">4 Vars</string>
    <string name="solve_three_var_equation_set">Set of equa. with 2 vars</string>
    <string name="solve_2_equa_set">Set of equa. with 2 vars</string>
    <string name="solve_3_equa_set">Set of equa. with 3 vars</string>
    <string name="solve_4_equa_set">Set of equa. with 4 vars</string>
    <string name="info">Information</string>
    <string name="hold_to_clear">Hold to clear the matrix</string>
    <string name="solve">Solve</string>
    <string name="input_instruction">Enter the coefficients in the complex number form</string>
    <string name="txt_result">Result</string>
    <string name="no_root">The set has no root</string>
    <string name="plenty_roots">The set has plenty of roots</string>
    <string name="app_title">Solving Set of Equations in Complex Number Application</string>
    <string name="input_guide">Input instruction</string>
    <string name="instruction">The coefficients are typed in complex number form.\nYou can use a+bi, a+bj, a, bi, bj forms.\nOr just a+b for simplification.\nYou can also use the polar form rAphi\n(with \'A\' or \'a\' is the separator between r and phi, phi is in degree by default)\nImportant: In the polar form, -rAphi is equivalent to -(rAphi)</string>
    <string name="example">Example:</string>
    <string name="error">Error</string>
    <string name="input_notice_error">Error in solving the equations.\nPlease check the coefficients then try again.</string>
    <string name="about_author">About author</string>
    <string name="settings">Settings</string>
    <string name="author_info">Author\'s information</string>
    <string name="author_infor_content">Author: Linh Le Vu\nHanoi University of Science and Technology\nAP EEE K59\n\nContact and feedback at:\nEmail: Levulinhbk@gmail.com\nFB: fb.com/levulinhbk</string>
    <string name="close">Close</string>
    <string name="my_name">Vu Linh Le</string>
    <string name="language_chooser">Language</string>
    <string name="show_in_polar">Show result in polar form</string>
    <string name="appearance">Appearance</string>
    <string name="show_color">Show color in bottom bar</string>
    <string name="show_phi_in_degree">Show phi in degree</string>
    <string name="tool_convert_pi">pi2float converting tool</string>
    <string name="pi2Float_converting_tool">pi2Float Converting Tool</string>
    <string name="input_tool_guide">How much do you want to multiply with pi?</string>
    <string name="hold_to_copy">Hold to copy to clipboard</string>
    <string name="enter_number_error">Please enter a number then try again!</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="convert" >Convert</string>
    <string name="result_will_appear_here" >Result will appear here</string>
    <string name="mnu_covert_polar_to_normal" >Convert polar form to normal form</string>
    <string name="product_info">ManDevices LAB</string>
    <string name="get_latest_version">get the latest version</string>
    <string name="functional_features">Functional features</string>
    <string name="smart_for_LC">Smart features for Linear Circuits</string>
    <string name="pref_title_autofill_enable">Smart Auto Filling Cells</string>
    <string name="pref_title_auto_fill">Enable Smart Auto Fill</string>
    <string name="version_name">v2.3.1.2</string>
</resources>
